--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Life Hacks make life eaiser">
+    <meta name="keywords" content="Life Hacks make life eaiser">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Life Hacks</title>
 </head>
 <body>
