HTML core structure added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <title>Life Hacks</title>
 </head>
 <body>
+    <header> header content</header>
     <h1>Life Hacks</h1>
-    
+
+    <section>
+        Hero Image
+    </section>
+    <section>
+        Life hacks content 
+    </section>
+    <section>
+        Life hacks vids
+    </section>
+
+    <footer>Social Media accounts</footer>
 </body>
 </html>
