Header, Nav added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,15 +12,28 @@
 
     <title>Life Hacks</title>
 </head>
+
 <body>
-    <header> header content</header>
-    <h1>Life Hacks</h1>
+    <header>
+        <a href="index.html">
+            <h1>Life Hacks</h1>
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a> </li>
+                <li><a href="#">Life Hacks</a></li>
+                <li><a href="#">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+
 
     <section>
         Hero Image
     </section>
     <section>
-        Life hacks content 
+        Life hacks content
     </section>
     <section>
         Life hacks vids
@@ -27,4 +41,5 @@
 
     <footer>Social Media accounts</footer>
 </body>
+
 </html>
