logo and nav styles

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Life Hacks</h1>
+            <h1 id =logo>Life Hacks</h1>
         </a>
 
-        <nav>
+        <nav id =menu>
             <ul>
                 <li><a href="index.html">Home</a> </li>
                 <li><a href="#">Life Hacks</a></li>
