add style to ul

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <h1 id =logo>Life Hacks</h1>
         </a>
 
-        <nav id =menu>
-            <ul>
-                <li><a href="index.html">Home</a> </li>
-                <li><a href="#">Life Hacks</a></li>
+        <nav>
+            <ul id =menu>
                 <li><a href="#">Sign Up</a></li>
+                <li><a href="#">Life Hacks</a></li>
+                <li><a href="index.html">Home</a> </li>
             </ul>
         </nav>
     </header>
