--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     </header>
 
 
-    <section>
-        Hero Image
+    <section id ="lhimage-outer">
+        <div id = "lhimage">
+
+        </div>
     </section>
     <section>
         Life hacks content
