Add Top 10 Life Hacks

--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
 
 
     <section id ="lhimage-outer">
-        <div id = "lhimage">
-
+        <div id = "lhimage"></div>
+        <div id = "lhoverlay">
+           <h2> Making Life Easier !</h2>
         </div>
     </section>
-    <section>
-        Life hacks content
+    <section  id ="most-pop">
+        <h1>Most popular Life Hacks</h1>
+        <div id = "left-about">Left</div>
+        <div id = "right-about">Right</div>
+        <div id ="center-about">Center</div>
     </section>
     <section>
         Life hacks vids
