add footer social media icons and links

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </section>
 
     <footer>Social Media accounts</footer>
-    <ul>
+    <ul class="social-links">
         <li>
             <a href="https://en-gb.facebook.com/" target="_blank" rel="noopener" aria-label="Vist our Facebook page"><i class="fa-brands fa-facebook"></i></a>
         </li>
